# CodingGuides

./: CMakeLists.txt  README.md  build_windows.bat
BP1_HighQualityCode/: CMakeLists.txt
BP1_HighQualityCode/include/: HighQualityClass.hpp  HighQualityRoutines.hpp
BP1_HighQualityCode/src/: HighQualityCode.cpp  HighQualityRoutines.cpp
